# HW0-parallelo-e-distribuito-mod.B

./: CMakeLists.txt  README.md  Tabella2.ods  Test.csv  docum (1).odt  main.c
include/Mat_Mat/: mat_mat.c  mat_mat.h
include/Mat_Vet/: mat_vet.c  mat_vet.h
include/Varie/: varie.c  varie.h
